Ported to MC 1.18.1